@@ -28,16 +28,19 @@
  * under the License.
  */
 
-import org.opensearch.gradle.info.BuildParams
+import groovy.xml.XmlParser
 
 plugins {
-  id('com.google.protobuf') version 'latest.release'
+  id('com.google.protobuf') version '0.10.0'
   id('opensearch.build')
   id('opensearch.publish')
   id('opensearch.internal-cluster-test')
   id('opensearch.optional-dependencies')
   id('me.champeau.gradle.japicmp') version '0.4.6'
+  id 'test-report-aggregation'
 }
+
+apply from: "$rootDir/gradle/fips.gradle"
 
 publishing {
   publications {
@@ -62,6 +65,7 @@ sourceSets {
 dependencies {
 
   api project(':libs:opensearch-common')
+  api project(':libs:opensearch-concurrent-queue')
   api project(':libs:opensearch-core')
   api project(":libs:opensearch-compress")
   api project(':libs:opensearch-secure-sm')
@@ -69,8 +73,8 @@ dependencies {
   api project(":libs:opensearch-geo")
   api project(":libs:opensearch-telemetry")
   api project(":libs:opensearch-task-commons")
-  implementation project(':libs:opensearch-arrow-spi')
 
+  compileOnly project(":libs:agent-sm:bootstrap")
   compileOnly project(':libs:opensearch-plugin-classloader')
   testRuntimeOnly project(':libs:opensearch-plugin-classloader')
 
@@ -95,6 +99,10 @@ dependencies {
   api libs.log4japi
   api libs.log4jjul
   api libs.log4jcore, optional
+
+  compileOnlyApi "org.jspecify:jspecify:1.0.0"
+  compileOnlyApi "com.google.errorprone:error_prone_annotations:${versions.error_prone_annotations}"
+
   annotationProcessor libs.log4jcore
   annotationProcessor project(':libs:opensearch-common')
 
@@ -112,6 +120,13 @@ dependencies {
   api libs.protobuf
   api libs.jakartaannotation
 
+  // Keeping Jackson 2.x dependencies till migration to 3.x completes across the ecosystem
+  api libs.jackson.core
+  api libs.jackson.dataformat.smile
+  api libs.jackson.dataformat.yaml
+  api libs.jackson.dataformat.cbor
+  api "org.yaml:snakeyaml:${versions.snakeyaml}"
+
   // https://mvnrepository.com/artifact/org.roaringbitmap/RoaringBitmap
   api libs.roaringbitmap
   testImplementation 'org.awaitility:awaitility:4.3.0'
@@ -119,9 +134,13 @@ dependencies {
     // tests use the locally compiled version of server
     exclude group: 'org.opensearch', module: 'server'
   }
+  internalClusterTestImplementation project(':libs:opensearch-secure-sm')
   internalClusterTestImplementation(project(":test:framework")) {
     exclude group: 'org.opensearch', module: 'server'
   }
+  testFipsRuntimeOnly "org.bouncycastle:bc-fips:${versions.bouncycastle_jce}"
+  testFipsRuntimeOnly "org.bouncycastle:bctls-fips:${versions.bouncycastle_tls}"
+  testFipsRuntimeOnly "org.bouncycastle:bcutil-fips:${versions.bouncycastle_util}"
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -163,20 +182,25 @@ tasks.named("testingConventions").configure {
     }
 }
 
+tasks.named('forbiddenApisInternalClusterTest').configure { forbidSleep() }
+
 // Set to current version by default
 def japicmpCompareTarget = System.getProperty("japicmp.compare.version")
-if (japicmpCompareTarget == null) { /* use latest released version */
-    // Read the list from maven central.
-    // Fetch the metadata and parse the xml into Version instances, pick the latest one
+if (japicmpCompareTarget == null) {
+    // Fetch released versions from maven central, pick the latest on the same major line before current.
+    def currentVersion = org.opensearch.gradle.Version.fromString(org.opensearch.gradle.VersionProperties.getOpenSearch())
     japicmpCompareTarget = new URL('https://repo1.maven.org/maven2/org/opensearch/opensearch/maven-metadata.xml').openStream().withStream { s ->
-        new XmlParser().parse(s)
-           .versioning.versions.version
-           .collect { it.text() }.findAll { it ==~ /\d+\.\d+\.\d+/ }
-           .collect { org.opensearch.gradle.Version.fromString(it) }
-           .toSorted()
-           .last()
-           .toString()
-        }
+        new XmlParser().parse(s).versioning.versions.version
+            .collect { it.text() }
+            .findAll { it ==~ /\d+\.\d+\.\d+/ }
+            .collect { org.opensearch.gradle.Version.fromString(it) }
+            .findAll { it.getMajor() == currentVersion.getMajor() && it.before(currentVersion) }
+            .toSorted()
+            .with { it.empty ? null : it.last().toString() }
+    }
+    if (japicmpCompareTarget == null) {
+        logger.lifecycle("No prior released version found on the same major line. Skipping japicmp.")
+    }
 }
 
 def generateModulesList = tasks.register("generateModulesList") {
@@ -227,9 +251,10 @@ tasks.named("processResources").configure {
 
 tasks.named("thirdPartyAudit").configure {
     ignoreMissingClasses(
-        *[
             // from com.fasterxml.jackson.dataformat.yaml.YAMLMapper (jackson-dataformat-yaml)
             'com.fasterxml.jackson.databind.ObjectMapper',
+            'com.fasterxml.jackson.databind.util.ClassUtil',
+            'com.fasterxml.jackson.databind.cfg.MapperBuilder',
 
             // from log4j
             'com.conversantmedia.util.concurrent.SpinPolicy',
@@ -250,12 +275,36 @@ tasks.named("thirdPartyAudit").configure {
             'com.fasterxml.jackson.databind.ser.std.StdScalarSerializer',
             'com.fasterxml.jackson.databind.ser.std.StdSerializer',
             'com.fasterxml.jackson.dataformat.xml.JacksonXmlModule',
+            'com.fasterxml.jackson.dataformat.xml.XmlFactory',
             'com.fasterxml.jackson.dataformat.xml.XmlMapper',
+            'com.fasterxml.jackson.dataformat.xml.XmlNameProcessor',
             'com.fasterxml.jackson.dataformat.xml.util.DefaultXmlPrettyPrinter',
             'com.fasterxml.jackson.databind.node.ObjectNode',
-            'org.fusesource.jansi.Ansi',
-            'org.fusesource.jansi.AnsiRenderer$Code',
+            'io.micrometer.context.ContextAccessor',
+            'io.micrometer.context.ContextRegistry',
+            'io.micrometer.context.ContextSnapshot',
+            'io.micrometer.context.ContextSnapshot$Scope',
+            'io.micrometer.context.ContextSnapshotFactory',
+            'io.micrometer.context.ContextSnapshotFactory$Builder',
+            'io.micrometer.context.ThreadLocalAccessor',
+            'io.micrometer.core.instrument.Clock',
+            'io.micrometer.core.instrument.Counter',
+            'io.micrometer.core.instrument.Counter$Builder',
+            'io.micrometer.core.instrument.DistributionSummary',
+            'io.micrometer.core.instrument.DistributionSummary$Builder',
+            'io.micrometer.core.instrument.Meter',
+            'io.micrometer.core.instrument.MeterRegistry',
+            'io.micrometer.core.instrument.Metrics',
+            'io.micrometer.core.instrument.Tag',
+            'io.micrometer.core.instrument.Tags',
+            'io.micrometer.core.instrument.Timer',
+            'io.micrometer.core.instrument.Timer$Builder',
+            'io.micrometer.core.instrument.Timer$Sample',
+            'io.micrometer.core.instrument.binder.jvm.ExecutorServiceMetrics',
+            'io.micrometer.core.instrument.composite.CompositeMeterRegistry',
+            'io.micrometer.core.instrument.search.Search',
             'com.lmax.disruptor.EventFactory',
+            'com.lmax.disruptor.EventHandler',
             'com.lmax.disruptor.EventTranslator',
             'com.lmax.disruptor.EventTranslatorTwoArg',
             'com.lmax.disruptor.EventTranslatorVararg',
@@ -263,7 +312,9 @@ tasks.named("thirdPartyAudit").configure {
             'com.lmax.disruptor.LifecycleAware',
             'com.lmax.disruptor.RingBuffer',
             'com.lmax.disruptor.Sequence',
+            'com.lmax.disruptor.SequenceBarrier',
             'com.lmax.disruptor.SequenceReportingEventHandler',
+            'com.lmax.disruptor.TimeoutException',
             'com.lmax.disruptor.WaitStrategy',
             'com.lmax.disruptor.dsl.Disruptor',
             'com.lmax.disruptor.dsl.ProducerType',
@@ -292,7 +343,10 @@ tasks.named("thirdPartyAudit").configure {
             'org.apache.commons.csv.QuoteMode',
             'org.apache.kafka.clients.producer.Producer',
             'org.apache.kafka.clients.producer.RecordMetadata',
+            'org.apache.kafka.common.serialization.ByteArraySerializer',
             'org.codehaus.stax2.XMLStreamWriter2',
+            'org.codehaus.stax2.ri.Stax2WriterAdapter',
+            'org.codehaus.stax2.util.StreamWriter2Delegate',
             'org.jctools.queues.MpscArrayQueue',
             'org.osgi.framework.Bundle',
             'org.osgi.framework.BundleActivator',
@@ -300,18 +354,48 @@ tasks.named("thirdPartyAudit").configure {
             'org.osgi.framework.BundleEvent',
             'org.osgi.framework.BundleReference',
             'org.osgi.framework.FrameworkUtil',
+            'org.osgi.framework.ServiceReference',
             'org.osgi.framework.ServiceRegistration',
             'org.osgi.framework.SynchronousBundleListener',
+            'org.osgi.framework.wiring.BundleRevision',
             'org.osgi.framework.wiring.BundleWire',
             'org.osgi.framework.wiring.BundleWiring',
+            'org.slf4j.Logger',
+            'org.slf4j.LoggerFactory',
+            'org.zeromq.SocketType',
+            'org.zeromq.ZContext',
+            'org.zeromq.ZMQ',
             'org.zeromq.ZMQ$Context',
             'org.zeromq.ZMQ$Socket',
-            'org.zeromq.ZMQ',
+            'org.zeromq.ZMonitor',
+            'org.zeromq.ZMonitor$Event',
+            'org.zeromq.ZMonitor$ZEvent',
+            'reactor.blockhound.BlockHound$Builder',
+            'reactor.blockhound.integration.BlockHoundIntegration',
 
             // from org.locationtech.spatial4j.io.GeoJSONReader (spatial4j)
             'org.noggit.JSONParser',
 
-            // from lucene-spatial
+            // from lucene-spatial (and other lucene modules)
+            'org.apache.lucene.facet.DrillDownQuery',
+            'org.apache.lucene.facet.DrillSideways',
+            'org.apache.lucene.facet.DrillSideways$Result',
+            'org.apache.lucene.facet.FacetResult',
+            'org.apache.lucene.facet.FacetsCollector',
+            'org.apache.lucene.facet.FacetsCollector$MatchingDocs',
+            'org.apache.lucene.facet.FacetsConfig',
+            'org.apache.lucene.facet.FacetsConfig$DimConfig',
+            'org.apache.lucene.facet.LabelAndValue',
+            'org.apache.lucene.facet.MultiDoubleValuesSource',
+            'org.apache.lucene.facet.MultiLongValues',
+            'org.apache.lucene.facet.MultiLongValuesSource',
+            'org.apache.lucene.facet.range.DoubleRange',
+            'org.apache.lucene.facet.range.LongRange',
+            'org.apache.lucene.facet.range.Range',
+            'org.apache.lucene.facet.taxonomy.FacetLabel',
+            'org.apache.lucene.facet.taxonomy.ParallelTaxonomyArrays',
+            'org.apache.lucene.facet.taxonomy.ParallelTaxonomyArrays$IntArray',
+            'org.apache.lucene.facet.taxonomy.TaxonomyReader',
             'com.fasterxml.jackson.databind.JsonSerializer',
             'com.fasterxml.jackson.databind.JsonDeserializer',
             'com.fasterxml.jackson.databind.node.ArrayNode',
@@ -320,16 +404,18 @@ tasks.named("thirdPartyAudit").configure {
             'com.google.common.geometry.S2Projections',
             'com.google.common.geometry.S2Point',
             'com.google.common.geometry.S2$Metric',
-            'com.google.common.geometry.S2LatLng'
-        ] + (BuildParams.runtimeJavaVersion < JavaVersion.VERSION_20) ? [] : [
+            'com.google.common.geometry.S2LatLng',
             'jdk.incubator.vector.ByteVector',
+            'jdk.incubator.vector.DoubleVector',
             'jdk.incubator.vector.FloatVector',
             'jdk.incubator.vector.IntVector',
+            'jdk.incubator.vector.LongVector',
             'jdk.incubator.vector.ShortVector',
             'jdk.incubator.vector.Vector',
+            'jdk.incubator.vector.VectorMask',
             'jdk.incubator.vector.VectorOperators',
+            'jdk.incubator.vector.VectorShape',
             'jdk.incubator.vector.VectorSpecies'
-        ]
     )
     ignoreViolations(
             'com.google.protobuf.MessageSchema',
@@ -341,7 +427,8 @@ tasks.named("thirdPartyAudit").configure {
             'com.google.protobuf.UnsafeUtil$MemoryAccessor',
             'org.apache.logging.log4j.core.util.internal.UnsafeUtil',
             'org.apache.logging.log4j.core.util.internal.UnsafeUtil$1',
-            'reactor.core.publisher.Traces$SharedSecretsCallSiteSupplierFactory$TracingException'
+            'reactor.core.publisher.CallSiteSupplierFactory$SharedSecretsCallSiteSupplierFactory',
+            'reactor.core.publisher.CallSiteSupplierFactory$SharedSecretsCallSiteSupplierFactory$TracingException'
     )
 }
 
@@ -349,6 +436,7 @@ tasks.named("dependencyLicenses").configure {
     mapping from: /jackson-.*/, to: 'jackson'
     mapping from: /reactor-.*/, to: 'reactor'
     mapping from: /lucene-.*/, to: 'lucene'
+    mapping from: /snakeyaml-.*/, to: 'snakeyaml'
     dependencies = project.configurations.runtimeClasspath.incoming.artifactView {
         componentFilter {
             it instanceof ModuleComponentIdentifier &&
@@ -360,8 +448,48 @@ tasks.named("dependencyLicenses").configure {
     }.files
 }
 
+if (System.getProperty("moduletests.coverage")) {
+  reporting {
+    reports {
+      testAggregateTestReport(AggregateTestReport) {
+        testSuiteName = "test"
+      }
+    }
+  }
+  tasks.named(JavaBasePlugin.CHECK_TASK_NAME) {
+    dependsOn tasks.named('testAggregateTestReport')
+  }
+}
 tasks.named("filepermissions").configure {
   mustRunAfter("generateProto")
+}
+
+if (System.getProperty("moduletests.coverage")) {
+  plugins.withId('jacoco') {
+    tasks.register('testCodeCoverageReport', JacocoReport) {
+      dependsOn tasks.named('test')
+      executionData fileTree(buildDir.absolutePath + "/jacoco").include("test.exec")
+      sourceDirectories.setFrom files(project(':server').sourceSets.main.allSource.srcDirs)
+      classDirectories.setFrom(files(sourceSets.main.output).filter { it.exists() })
+      reports {
+        xml.required = true
+      }
+    }
+
+    tasks.register('testCodeCoverageReportInternalClusterTest', JacocoReport) {
+      dependsOn tasks.named('internalClusterTest')
+      executionData fileTree(buildDir.absolutePath + "/jacoco").include("internalClusterTest.exec")
+      classDirectories.setFrom(files(sourceSets.main.output).filter { it.exists() })
+
+      reports {
+        xml.required = true
+      }
+    }
+
+    tasks.named(JavaBasePlugin.CHECK_TASK_NAME) {
+      dependsOn (tasks.named('testCodeCoverageReport'), tasks.named('testCodeCoverageReportInternalClusterTest'))
+    }
+  }
 }
 
 tasks.named("licenseHeaders").configure {
@@ -377,9 +505,7 @@ tasks.named("licenseHeaders").configure {
 
 tasks.test {
     environment "node.roles.test", "[]"
-    if (BuildParams.runtimeJavaVersion > JavaVersion.VERSION_1_8) {
-        jvmArgs += ["--add-opens", "java.base/java.nio.file=ALL-UNNAMED"]
-    }
+    jvmArgs += ["--add-opens", "java.base/java.nio.file=ALL-UNNAMED", "-Djdk.attach.allowAttachSelf=true", "-XX:+EnableDynamicAgentLoading" ]
 }
 
 tasks.named("sourcesJar").configure {
@@ -389,22 +515,25 @@ tasks.named("sourcesJar").configure {
   }
 }
 
-/** Compares the current build against a laltest released version or the version supplied through 'japicmp.compare.version' system property */
+/** Compares the current build against a latest released version or the version supplied through 'japicmp.compare.version' system property */
 tasks.register("japicmp", me.champeau.gradle.japicmp.JapicmpTask) {
-    logger.info("Comparing public APIs from ${version} to ${japicmpCompareTarget}")
-    // See please https://github.com/siom79/japicmp/issues/201
-    compatibilityChangeExcludes = [ "METHOD_ABSTRACT_NOW_DEFAULT" ]
-    oldClasspath.from(files("${buildDir}/japicmp-target/opensearch-${japicmpCompareTarget}.jar"))
-    newClasspath.from(tasks.named('jar'))
-    onlyModified = true
-    failOnModification = true
-    ignoreMissingClasses = true
-    failOnSourceIncompatibility = true
-    annotationIncludes = ['@org.opensearch.common.annotation.PublicApi', '@org.opensearch.common.annotation.DeprecatedApi']
-    annotationExcludes = ['@org.opensearch.common.annotation.InternalApi']
-    txtOutputFile = layout.buildDirectory.file("reports/java-compatibility/report.txt")
-    htmlOutputFile = layout.buildDirectory.file("reports/java-compatibility/report.html")
-    dependsOn downloadJapicmpCompareTarget
+    enabled = japicmpCompareTarget != null
+    if (japicmpCompareTarget != null) {
+        logger.lifecycle("Comparing public APIs from ${version} to ${japicmpCompareTarget}")
+        // See please https://github.com/siom79/japicmp/issues/201
+        compatibilityChangeExcludes = [ "METHOD_ABSTRACT_NOW_DEFAULT", "METHOD_ADDED_TO_INTERFACE" ]
+        oldClasspath.from(files("${buildDir}/japicmp-target/opensearch-${japicmpCompareTarget}.jar"))
+        newClasspath.from(tasks.named('jar'))
+        onlyModified = true
+        failOnModification = true
+        ignoreMissingClasses = true
+        failOnSourceIncompatibility = true
+        annotationIncludes = ['@org.opensearch.common.annotation.PublicApi', '@org.opensearch.common.annotation.DeprecatedApi']
+        annotationExcludes = ['@org.opensearch.common.annotation.InternalApi', '@org.opensearch.common.annotation.ExperimentalApi']
+        txtOutputFile = layout.buildDirectory.file("reports/java-compatibility/report.txt")
+        htmlOutputFile = layout.buildDirectory.file("reports/java-compatibility/report.html")
+        dependsOn downloadJapicmpCompareTarget
+    }
 }
 
 /** If the Java API Comparison task failed, print a hint if the change should be merged from its target branch */
